# Firmware

./: .gitignore  .gitmodules  README.md  example_config.toml  partitions.csv  sdkconfig
.github/workflows/: main.yml  pull_request.yml
main/: CMakeLists.txt  main.cpp
main/app/: CConfig.hpp  app.cpp  app.hpp
main/app/SD/: sd.cpp  sd.hpp
main/app/Wifi/: wifi.cpp  wifi.hpp  wificredentials.cpp  wificredentials.hpp
main/app/config/: config.cpp  config.hpp
main/app/logger/: log.cpp  log.hpp  logscope.cpp  logscope.hpp  logtype.cpp  logtype.hpp
main/app/mqtt/: mqtt.cpp  mqtt.hpp
main/app/sdcard/: dir.cpp  dir.hpp  file.cpp  file.hpp  sd.cpp  sd.hpp
main/app/sensors/: measurements.cpp  measurements.hpp  sensor.cpp  sensor.hpp  sensormanager.cpp  sensormanager.hpp  sensoroutput.cpp  sensoroutput.hpp  sensorstatus.cpp  sensorstatus.hpp
main/app/sensors/impl/: AS726x.cpp  AS726x.hpp  CCS811.cpp  CCS811.hpp  MAX4466.cpp  MAX4466.hpp  MIX8410.cpp  MIX8410.hpp  PMSA0003I.cpp  PMSA0003I.hpp  SCD30.cpp  SCD30.hpp  TSL2591.cpp  TSL2591.hpp  adctest.cpp  adctest.hpp  colorsensor.cpp  colorsensor.hpp  dbsensor.cpp  dbsensor.hpp  i2ctest.cpp  i2ctest.hpp  lightintensitysensor.cpp  lightintensitysensor.hpp  o2sensor.cpp  o2sensor.hpp  particlesensor.cpp  particlesensor.hpp  scdsensor.cpp  scdsensor.hpp  sdtest.cpp  sdtest.hpp  uarttest.cpp  uarttest.hpp  vocsensor.cpp  vocsensor.hpp  wifitest.cpp  wifitest.hpp
main/app/time/: time.cpp  time.hpp
main/app/timer/: CTimer.cpp  CTimer.hpp  CTimers.cpp  CTimers.hpp
main/app/wifi/: wifi.cpp  wifi.hpp  wificredentials.cpp  wificredentials.hpp
